Update 'go-arkgkarl' component image to: quay.io/rhtap_qe/go-arkgkarl:d200d17d370e3108aea59084f4e062b2f45b4187@sha256:57ee8201c61faac6469cac1ac9d13048046a7e90f3b5bc134a7ab5c545896f3b

--- a/components/go-arkgkarl/overlays/development/deployment-patch.yaml
+++ b/components/go-arkgkarl/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-arkgkarl
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-arkgkarl:d200d17d370e3108aea59084f4e062b2f45b4187@sha256:57ee8201c61faac6469cac1ac9d13048046a7e90f3b5bc134a7ab5c545896f3b
+          name: container-image
